--- a/client/src/styles/components/_form.scss
+++ b/client/src/styles/components/_form.scss
@@ -9,7 +9,9 @@
         margin-left: 1rem;
         margin-right: 1rem;
 
-        margin-bottom: 2rem;
+        margin-bottom: 1rem;
+        display: flex;
+        flex-direction: column;
 
         // &:not(:last-child) {
         //     margin-bottom: 2rem;
@@ -31,6 +33,8 @@
         color: $color-white;
         border-bottom: 2px solid $color-grey-light-1;
         margin-bottom: 2rem;
+        max-width: 90%;
+        align-self: center;
 
         &:focus {
             outline: none;
@@ -62,6 +66,7 @@
         display: block;
         transition: all .3s;
         color: $color-primary;
+        margin-left: 1.5rem;
 
         &--white {
             color: $color-white;
